--- a/minigrep/Cargo.toml
+++ b/minigrep/Cargo.toml
@@ -9,7 +9,7 @@ name = "minigrep"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
-descripton = "A tool to grep strings within a line from a text file"
+description = "A tool to grep strings within a line from a text file"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
